HADOOP-7986. Adding config for MapReduce History Server protocol in hadoop-policy.xml for service level authorization. Contributed by Mahadev Konar. svn merge --ignore-ancestry -c 1234097 ../../trunk/
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1234098 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -143,6 +143,9 @@ Release 0.23.1 - Unreleased
    HADOOP-7982. UserGroupInformation fails to login if thread's context
    classloader can't load HadoopLoginModule. (todd)
 
+   HADOOP-7986. Adding config for MapReduce History Server protocol in
+   hadoop-policy.xml for service level authorization. (Mahadev Konar via vinodkv)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
