MAPREDUCE-3689. RM web UI doesn't handle newline in job name. (Thomas Graves via mahadev) - Merging r1234148 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1234149 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -472,6 +472,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3698. Client cannot talk to the history server in secure mode.
     (mahadev)
 
+    MAPREDUCE-3689. RM web UI doesn't handle newline in job name.
+    (Thomas Graves via mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
