MAPREDUCE-3701. Delete HadoopYarnRPC from 0.23 branch. (mahadev)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1234161 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -475,6 +475,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3689. RM web UI doesn't handle newline in job name.
     (Thomas Graves via mahadev)
 
+    MAPREDUCE-3701. Delete HadoopYarnRPC from 0.23 branch.
+    (mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
