HDFS-2826. Add test case for HDFS-1476 (safemode can initialize replication queues before exiting) (todd)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1235068 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -113,6 +113,9 @@ Release 0.23.1 - UNRELEASED
     HDFS-2825. Add test hook to turn off the writer preferring its local
     DN. (todd)
 
+    HDFS-2826. Add test case for HDFS-1476 (safemode can initialize
+    replication queues before exiting) (todd)
+
   BUG FIXES
 
     HDFS-2541. For a sufficiently large value of blocks, the DN Scanner 
