--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -504,6 +504,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3714. Fixed EventFetcher and Fetcher threads to shut-down properly
     so that reducers don't hang in corner cases. (vinodkv)
 
+    MAPREDUCE-3712. The mapreduce tar does not contain the hadoop-mapreduce-client-
+    jobclient-tests.jar. (mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
