MAPREDUCE-3717. JobClient test jar has missing files to run all the test programs. (mahadev) - Merging r1235639 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1235640 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -507,6 +507,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3712. The mapreduce tar does not contain the hadoop-mapreduce-client-
     jobclient-tests.jar. (mahadev)
 
+    MAPREDUCE-3717. JobClient test jar has missing files to run all the test programs.
+    (mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
