--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -528,6 +528,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3721. Fixed a race in shuffle which caused reduces to hang.
     (sseth via acmurthy) 
 
+    MAPREDUCE-3733. Add Apache License Header to hadoop-distcp/pom.xml.
+    (mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
