MAPREDUCE-3735. Add distcp jar to the distribution (tar). (mahadev) - Merging r1236336 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1236337 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -531,6 +531,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3733. Add Apache License Header to hadoop-distcp/pom.xml.
     (mahadev)
 
+    MAPREDUCE-3735. Add distcp jar to the distribution (tar).
+    (mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
