HADOOP-7993. Hadoop ignores old-style config options for enabling compressed output. (Anupam Seth via mahadev) - Merging r1236506 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1236507 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -167,6 +167,9 @@ Release 0.23.1 - Unreleased
    HADOOP-7997. SequenceFile.createWriter(...createParent...) no
    longer works on existing file. (Gregory Chanan via eli)
 
+   HADOOP-7993. Hadoop ignores old-style config options for enabling compressed 
+   output. (Anupam Seth via mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
