HADOOP-8000. fetchdt command not available in bin/hadoop. (Arpit Gupta via mahadev) - Merging r1236921 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1236923 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -173,6 +173,9 @@ Release 0.23.1 - Unreleased
    HADOOP-7993. Hadoop ignores old-style config options for enabling compressed 
    output. (Anupam Seth via mahadev)
 
+   HADOOP-8000. fetchdt command not available in bin/hadoop.
+   (Arpit Gupta via mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
