--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -149,6 +149,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3679. AM logs and others should not automatically refresh after every 1 
     second. (Vinod KV  via mahadev)
 
+    MAPREDUCE-3754. Modified RM UI to filter applications based on state of the
+    applications. (vinodkv)
+
   OPTIMIZATIONS
 
     MAPREDUCE-3567. Extraneous JobConf objects in AM heap. (Vinod Kumar
