MAPREDUCE-3774. Moved yarn-default.xml to hadoop-yarn-common from hadoop-server-common. svn merge --ignore-ancestry -c 1239291 ../../trunk/
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1239292 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -152,6 +152,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3754. Modified RM UI to filter applications based on state of the
     applications. (vinodkv)
 
+    MAPREDUCE-3774. Moved yarn-default.xml to hadoop-yarn-common from
+    hadoop-server-common. (Mahadev Konar via vinodkv)
+
   OPTIMIZATIONS
 
     MAPREDUCE-3567. Extraneous JobConf objects in AM heap. (Vinod Kumar
