svn merge -c 1239386 from trunk for HADOOP-7470.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1239389 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -90,6 +90,8 @@ Release 0.23.1 - Unreleased
    HADOOP-8009. Create hadoop-client and hadoop-minicluster artifacts for downstream 
    projects. (tucu)
 
+    HADOOP-7470. Move up to Jackson 1.8.8.  (Enis Soztutar via szetszwo)
+
   OPTIMIZATIONS
 
   BUG FIXES
